kubernetes/manifests/network/traefik/configurations/middlewares.yaml
# ---
# apiVersion: traefik.io/v1alpha1
# kind: Middleware
# metadata:
#   name: stripprefix
# spec:
#   stripPrefix:
#     prefixes:
#       - /stripit

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-middleware
spec:
  stripPrefix:
    prefixes:
      - "/dashboard"
    forceSlash: false

# kubectl apply -f https://raw.githubusercontent.com/traefik/traefik/v2.10/docs/content/reference/dynamic-configuration/kubernetes-crd-definition-v1.yml
