kubernetes/manifests/network/traefik/configurations/service-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
  namespace: traefik
spec:
  type: LoadBalancer
  ports:
    - port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app.kubernetes.io/name: traefik
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: traefik
spec:
  rules:
  - host: traefik.localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: traefik-service
            port:
              number: 9000
  ingressClassName: nginx
